--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,8 @@
   --gray900: #141414;
   --green500: #00875F;
   --green300: #00B37E;
-
   --white: #F2F2F2;
 }
-
 
 :focus {
   outline: 2px solid #00875F;
@@ -31,15 +29,14 @@ input,
 button,
 textarea {
   font-size: 1rem;
-  color: var(--white);
-  font-family: 'Roboto', sans-serif;
 }
 
 .container {
   display: flex;
   align-items: center;
-  height: 100vh;
   justify-content: center;
+  overflow: auto;
+  padding: 6rem 4rem 2rem;
 }
 
 .main {
@@ -48,17 +45,36 @@ textarea {
   grid-template-columns: 1fr 1fr;
 }
 
-.form-container {
-  display: flex;
-  flex-direction: column;
-  height: 100%;
-  gap: 1.5rem;
-  background: var(--gray700);
-  padding: 2rem;
-  border-radius: 8px;
+img {
+  width: 100%;
 }
 
-fieldset {
+@media (max-width: 1024px) {
+  img {
+    display: none;
+  }
+
+  .main {
+    width: 100%;
+    max-width: 32.5rem;
+    grid-template-columns: 1fr;
+  }
+
+}
+
+.form-container {
+  position: relative;
+  border-radius: 8px;
+  min-height: 31.8125rem;
+
+  background: var(--gray700);
+}
+
+.form-content {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 3rem 2rem 2rem;
   border: 0;
 }
 
@@ -68,7 +84,7 @@ legend {
 
 .title {
   display: grid;
-  gap: 0.5rem
+  gap: 0.5rem;
 }
 
 .title p {
@@ -80,20 +96,19 @@ legend {
   gap: 1rem;
 }
 
-.input-group label {
-  display: none;
-}
 
 input,
 button {
   border-radius: 6px;
-  height: 56px;
+  height: 3.5rem;
   width: 100%;
   border: 0;
+  font-family: 'Roboto', sans-serif;
 }
 
 input {
   padding: 1rem;
+  color: var(--white);
   background: var(--gray900);
 }
 
@@ -103,13 +118,9 @@ input::placeholder {
 
 .calc-button {
   font-size: 1rem;
-  font-style: normal;
   font-weight: 700;
   line-height: 150%;
-  /* 1.5rem */
-
   padding: 1rem;
-
   color: white;
   background: var(--green500);
 }
@@ -119,17 +130,74 @@ input::placeholder {
   background: var(--green300);
 }
 
-
-
-.result {
+.calc-container {
   display: flex;
-  font-family: 'Fira Code', monospace;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  height: 5rem;
+
   padding: 1rem;
 
-  height: 80px;
+  position: absolute;
+  top: -4.375rem;
+  z-index: -1;
+  
+  border-radius: 8px 8px 0 0;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.20) 0%, rgba(0, 0, 0, 0.20) 100%), #202024;
+}
+
+.calc-container p {
+  font: 700 1.125rem/1.6 'Fira Code', monospace;
+  color: var(--gray100);
+}
+
+.result-container {
+  display: flex;
   align-items: center;
-  margin-top: 0.5rem;
+  justify-content: center;
+  
+  gap: 1rem;
   width: 100%;
-  border-radius: 8px;
-  border: 1px solid var(--gray300);
+  padding: 1rem 2rem;
+}
+
+.result-content {
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 1.5;
+}
+
+.result-badge {
+  font-weight: 700;
+  color: var(--gray700);
+  padding: 0.25rem 1rem;
+  border-radius: 4px;
+}
+
+.result-container[data-status='status-alert'] {
+  background: radial-gradient(5319.14% 292.91% at -112.79% 41.39%, #5B5802 0%, rgba(91, 88, 2, 0.34) 48.69%, rgba(91, 88, 2, 0.35) 65.06%, #5B5802 100%);
+}
+
+.result-container[data-status='status-ok'] {
+  background: radial-gradient(5319.14% 292.91% at -112.79% 41.39%, #00875e79 0%, rgba(0, 135, 95, 0.20) 48.69%, rgba(0, 135, 95, 0.20) 65.06%, #00875F 100%);
+}
+.result-calc[data-status='status-ok'] {
+  color: #00B37E;
+}
+
+.result-calc[data-status='status-alert'] {
+  color: #C3C700;
+}
+
+.result-badge[data-status='status-ok'] {
+  background-color: #00B37E;
+}
+.result-badge[data-status='status-alert'] {
+  background-color: #C3C700;
+}
+
+.hidden {
+  display: none;
 }
